fix media cs on mobiles

--- a/css/modal-window/modal-window.css
+++ b/css/modal-window/modal-window.css
@@ -37,3 +37,19 @@ button.popup-btn:hover { cursor: pointer; }
   from { top: -300px; opacity: 0; }
   to { top: 50%; opacity: 1; }
 }
+
+/* Responsive Design */
+@media (max-width: 768px) {
+.modal-window__standard-scale {
+    min-width: 360px;
+    width: 45vh;
+}
+.modal-window__large-scale {
+    min-width: 370px;
+    width: 60vh;
+}
+.modal-window__huge-scale {
+    min-width: 375px;
+    width: 60vh;
+}
+}
